# praman

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  PROGRESS.md  README.md  REPORT.md  brief.md  pyproject.toml  requirements.lock.txt
.github/workflows/: deploy.yml
artifacts/praman-verifier/: manifest.json
configs/: calib.yaml  data.yaml  policy.yaml  risk.yaml  verifier.yaml
docs/: model-card.md  regulator-field-mapping.md
runs/: demo_audit.jsonl
runs/full/: calibration.json  indic.json  latency.json  metrics.json  riskcontrol.json  robustness.json  tokens.json
scripts/: 00_setup.sh  10_data.py  20_score.py  30_pipeline.py  31_crc_validate.py  40_robustness.py  50_indic.py  60_export_onnx.py  70_build_artifact.py  80_demo.py  90_report.py  99_overnight.sh  _probe_onnx_agree.py  _probe_service.py  _probe_speed.py  sync_results.sh
src/praman/: __init__.py  _env.py  _web.py  audit.py  calibrate.py  cli.py  data.py  decide.py  decompose.py  eval.py  pipeline.py  plots.py  riskcontrol.py  service.py  verifier.py
tests/: conftest.py  test_calibrate.py  test_data.py  test_decide_audit.py  test_decompose.py  test_riskcontrol.py  test_verify_airgap.py
